# permia

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  SETUP.sh  alembic.ini  crontab.example  docker-compose.yml  package.json  pyproject.toml  test_upload.sh  test_upload_with_auth.sh  turbo.json
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci-cd.yaml  monorepo-ci.yml
apps/backend/: Dockerfile  README.md  pyproject.toml
apps/backend/src/: main.py
apps/backend/src/core/: config.py
apps/frontend/: README.md  index.html  package.json
data/registries/: facts  statutes
data/registries/rules/: ACCESS_001  FIRE_001
docs/gate-0/: validation-protocol.md
docs/onboarding/: inspector-pilot-checklist.md
docs/security/: SECURITY.md
k8s/: deployment.yaml  ingress.yaml  service.yaml
keys/: generate_keypair.sh
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_audit_and_idempotency.py  003_tenanting.py  004_add_exports_table.py  005_add_applications_facts_snapshots.py
rules/: statute-registry.json
src/: __init__.py  main.py
src/api/: applications.py  evaluation.py  evidence.py  exports.py  facts.py  snapshots.py
src/core/: __init__.py  auth.py  config.py  correlation.py  database.py  errors.py  logging_config.py  mime_config.py  rate_limit.py
src/db/: __init__.py  models.py
src/schemas/: __init__.py  applications.py  evaluation.py  evidence.py  exports.py  facts.py  snapshots.py
src/services/: audit.py  evaluation.py  exif_extractor.py  exports.py  integrity.py  storage.py
src/tasks/: __init__.py  cleanup.py
src/utils/: dev_token.py
tests/: __init__.py  conftest.py  test_api_evidence.py  test_exports.py  test_integrity.py  test_integrity_service.py  test_rate_limit.py  test_upload.py
